[package]
name = "drone_al"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = "3"
dotenv = "0"
tracing-subscriber = "0.3.19"
tracing = "0.1"
